[gd_scene load_steps=3 format=2]

[ext_resource path="res://Image/Select.png" type="Texture" id=1]
[ext_resource path="res://script/SellectMode.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1925.0
margin_bottom = 1073.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image2text" type="Button" parent="."]
margin_left = 30.0
margin_top = 28.0
margin_right = 924.0
margin_bottom = 510.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2text" type="Button" parent="."]
margin_left = 996.23
margin_top = 28.0
margin_right = 1890.23
margin_bottom = 510.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image2image" type="Button" parent="."]
margin_left = 25.7621
margin_top = 568.326
margin_right = 919.762
margin_bottom = 1050.33
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back2menu" type="Button" parent="."]
margin_left = 989.873
margin_top = 570.445
margin_right = 1883.87
margin_bottom = 1052.45
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="image2text" to="." method="_on_image2text_button_down"]
[connection signal="button_down" from="text2text" to="." method="_on_text2text_button_down"]
[connection signal="pressed" from="text2text" to="." method="_on_text2text_pressed"]
[connection signal="button_down" from="image2image" to="." method="_on_image2image_button_down"]
[connection signal="button_down" from="back2menu" to="." method="_on_back2menu_button_down"]
